<resources>
    <string name="app_name">Language App</string>
    <string name="signup">Login</string>
    <string name="not_an_existing_member">Already you member?</string>
    <string name="proceed_">Continue</string>
    <string name="fake_email">Email Address</string>
    <string name="last_alias">Last Name</string>
    <string name="first_alias">First name</string>
    <string name="forge_an_identity">Create an Account</string>
    <string name="invent">Signup</string>
    <string name="secret_code">Password</string>
    <string name="confirm_secret_phrase">Confirm password</string>
    <string name="generate_secret_phrase">Choose a Password</string>
    <string name="mislead_join_now_and_n_start_learning">For free, join now and \nstart learning</string>
    <string name="forgotten_password">Forgot Password</string>
    <string name="unregistered_member">Not you member? </string>
    <string name="false_google">Google for </string>
    <string name="misdirection_available">Use can use </string>
    <string name="obscure_sign_in">sign in</string>
    <string name="false_signup"> Signup</string>
    <string name="your_profile">Your profile, Emil</string>
    <string name="switch_theme">Switch to Dark</string>
    <string name="change_mother_language">Change mother language</string>
    <string name="change_your_image">Change your image</string>
    <string name="logout">Logout</string>
    <string name="word_practice">Word practice</string>
    <string name="fly">Муха</string>
    <string name="gardener">Садовник</string>
    <string name="gladius">Гладиоус</string>
    <string name="dog">Собака</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="listening">Listening</string>
    <string name="your_result">Your result</string>
    <string name="check_my_speech">Check my speech</string>
    <string name="yay_go_next">Yay! Go next</string>
    <string name="more">More</string>
    <string name="take_your_time_to_learn">Take your time to learn</string>
    <string name="confidence_in_your_words">Confidence in your words</string>
    <string name="develop_a_habit">Develop a habit of learning and\nmake it a part of your daily routine</string>
    <string name="the_lessons_you_need_to_learn">The lessons you need to learn</string>
    <string name="using_a_variety_of_learning_styles_to_learn_and_retain">Using a variety of learning styles to learn\nand retain</string>
    <string name="with_conversation_based_learning">With conversation-based learning,\n you"'"ll be talking from lesson one</string>
    <string name="skip_onboarding">Skip onboarding</string>
    <string name="please_press_button_and_say_this_n_word_our_service_will_check_n_your_pronunciation">Please press button and say this word. Our service will check your pronunciation</string>
    <string name="choose_a_language">Choose a language</string>
    <string name="guess_the_animal">Guess the animal</string>
    <string name="write_who_is_on_image">Write who is on image</string>
    <string name="holy_molly_that_is_right">Holy Molly! That is Right</string>
    <string name="try_again">Try again</string>
    <string name="your_photo_is_gorgeous">Your photo is gorgeous!</string>
    <string name="just_resize_that_photo_for_fit_in_square">Just resize that photo\nfor fit in square</string>
    <string name="use_that_image">Use that image</string>
</resources>