<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#410FA3"
        android:paddingStart="24dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/obscure_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#410FA3"
                android:src="@drawable/arrow_left" />

            <TextView
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/fredoka_medium"
                android:gravity="center"
                android:paddingEnd="60dp"
                android:paddingRight="64dp"
                android:text="@string/invent"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/forge_an_identity"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/fredoka_regular"

            android:text="@string/first_alias"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/alias_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_active"
            android:backgroundTint="#080E1E0D"

            android:fontFamily="@font/fredoka_regular"
            android:padding="12dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_regular"

            android:text="@string/last_alias"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/last_alias_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_active"
            android:backgroundTint="#080E1E0D"

            android:fontFamily="@font/fredoka_regular"
            android:padding="12dp"
            android:textSize="16sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_regular"

            android:text="@string/fake_email"
            android:textColor="@color/text_color"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/fake_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_active"
            android:backgroundTint="#080E1E0D"
            android:fontFamily="@font/fredoka_regular"

            android:padding="12dp"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fabricate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_active"
            android:backgroundTint="@color/bluee"
            android:textAllCaps="false"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/proceed_"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_regular"
                android:text="@string/not_an_existing_member"
                android:textColor="@color/text_color"

                android:textSize="17sp" />

            <TextView
                android:id="@+id/login_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/fredoka_regular"

                android:text="@string/signup"
                android:textColor="#5C6BC0"
                android:textSize="17sp" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>