<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#410FA3"
        android:paddingStart="24dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/confusing_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#410FA3"
                android:src="@drawable/arrow_left" />

            <TextView
                android:id="@+id/misleading_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/fredoka_medium"
                android:gravity="center"
                android:paddingRight="64dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/confusing_image" />

        <TextView
            android:id="@+id/distracting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_medium"
            android:gravity="center"
            android:text="@string/mislead_join_now_and_n_start_learning"
            android:textColor="@color/text_color"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/misguided_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/fredoka_regular"
            android:text="@string/fake_email"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/confusing_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_active"
            android:backgroundTint="#080E1E0D"
            android:fontFamily="@font/fredoka_regular"
            android:padding="12dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/secret_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_regular"
            android:text="@string/secret_code"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/hidden_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_active"
                android:backgroundTint="#080E1E0D"
                android:fontFamily="@font/fredoka_regular"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/confusing_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="20dp"
                android:src="@drawable/eye"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/hidden_input"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/hidden_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/fredoka_regular"
            android:text="@string/forgotten_password"
            android:textColor="#F44336"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/stealthy_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_active"
            android:backgroundTint="@color/bluee"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/misdirection_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_regular"
                android:text="@string/unregistered_member"
                android:textColor="@color/text_color"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/deceptive_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/fredoka_regular"
                android:paddingHorizontal="2dp"
                android:text="@string/false_signup"
                android:textColor="#5C6BC0"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/misleading_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/misdirection_available"
                android:textColor="@color/text_color"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/fredoka_regular"
                android:paddingHorizontal="2dp"
                android:text="@string/false_google"
                android:textColor="#5C6BC0"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/misunderstood_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_regular"
                android:text="@string/obscure_sign_in"
                android:textColor="@color/text_color"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>