<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Onboarding3">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="263dp"
        android:layout_height="263dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboarding3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="26dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/slider3" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/the_lessons_you_need_to_learn"
        android:fontFamily="@font/fredoka_medium"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/using_a_variety_of_learning_styles_to_learn_and_retain"
        android:fontFamily="@font/fredoka_medium"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="24dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_active"
        android:backgroundTint="@color/bluee"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/choose_a_language"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:text="@string/skip_onboarding"
        android:fontFamily="@font/fredoka_medium"/>

</LinearLayout>