<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#410FA3"
        android:padding="25dp">

        <TextView
            android:id="@+id/language_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/your_photo_is_gorgeous"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/just_resize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="left"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/just_resize_that_photo_for_fit_in_square"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="263dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/miiii" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/choosebtn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="120dp"
            android:background="@drawable/rounded_active"
            android:backgroundTint="#5B7BFE"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/use_that_image"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>




</LinearLayout>